--- a/fam_backup.html
+++ b/fam_backup.html
@@ -58,8 +58,8 @@
 				<li><a href="fam_put.html">fam_put</a></li>
 				<li><a href="fam_gather.html">fam_gather</a></li>
 				<li><a href="fam_scatter.html">fam_scatter</a></li>
-				<li><a href="fam_copy.html">fam_copy</a></li>
-				<li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
+				<li><a href="fam_backup.html">fam_backup</a></li>
+				<li><a href="fam_backup_wait.html">fam_backup_wait</a></li>
 			</ul>
 			<hr>
 			Atomics
@@ -93,13 +93,13 @@
 			<hr>
 		</nav>
 		<article>
-		<h1 class="code">openfam::fam::fam_create_region</h1>
-	<p>Create a new region in FAM.</p>
+			<h1 class="code">openfam::fam::fam_backup</h1>
+	<p>backup data from one FAM-resident data item to another FAM-resident data item.</p>
 	<h2>Synopsis</h2>
-	<p class="code">Fam_Region_Descriptor *fam_create_region(char *name, uint64_t
-		size, mode_t permissions, Fam_Region_Attributes* regionAttributes);</p>
+	<p class="code">void *fam_backup(Fam_Descriptor *src, const char *BackupName,
+                     Fam_Backup_Options *backupOptions);</p>
 	<h2>Description</h2>
-	<p>This method creates a region in FAM for subsequent use</p>
+	<p>Initiates a backup operation of data from a FAM-resident data item to an archival storage.</p>
 	<h2>Input Arguments</h2>
 	<table>
 		<tbody>
@@ -113,126 +113,102 @@
 			</tr>
 			<tr>
 				<td class="code">
-					name
+					src
 				</td>
 				<td>
-					Name of the region to be created.
+					Descriptor associated with the source data item in FAM.
 				</td>
 			</tr>
 			<tr>
 				<td class="code">
-					size
+					BackupName
 				</td>
 				<td>
-					Requested size of the region in bytes.
+					Name of the backup.
 				</td>
 			</tr>
 			<tr>
 				<td class="code">
-					permissions
+					backupOptions
 				</td>
 				<td>
-					Permissions to be associated with this region.
-				</td>
-			</tr>
-			<tr>
-				<td class="code">
-					regionAttributes
-				</td>
-				<td>
-					Is a structure that holds region attributes like:
-				
-				<p>					
-					•	<b>redundancyLevel</b> represents the redundancy level for the data items within the region. The supported values for redundancyLevel are: {DEFAULT, NONE, RAID1, RAID5} . The current DEFAULT is NONE.
-				</p>
-				<p>
-					•	<b>memoryType</b> denotes the type of memory the region is created on. The supported values for memoryType are: {DEFAULT, VOLATILE, PERSISTENT}. For GoldenTicket, PERSISTENT regions will be created in SCM, while VOLATILE regions will be created in DRAM. The current DEFAULT is VOLATILE.
-				</p>
-				<p>
-					•	<b>interleaveEnable</b> denotes if data item interleaving is enabled for the region. The supported values are: {DEFAULT, ENABLE, DISABLE}. A value of DISABLE implies that data items within the region are not interleaved across memory servers, and each data item is hosted within a single memory server (subject to redundancyLevel). A value of ENABLE indicates data item interleaving is enabled, and data items are striped across memory servers using a system-defined interleave block size. The current DEFAULT value is DISABLE.
-				</p>			
+					backup related info like retention period, etc.
 				</td>
 			</tr>
 		</tbody>
 	</table>
-	<p>&nbsp;</p>
 	<h2>Return Values</h2>
-	<p>Descriptor to the created region. Throws <code>Fam_Exception</code> on error.</p>
-	<h2>Fam error numbers</h2>
+	<p>Returns a pointer to the wait object for the backup operation.
+		This object can be used to wait for the completion of the backup operation.
+		Throws <code>Fam_Exception</code> on error.</p>
+	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
 	<tr><th>Error</th><th>Description</th></tr>
-	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
-	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>Region name is already present in FAM.</td></tr>
-	<tr><td class="code">FAM_ERR_NAME_TOO_LONG</td><td>Region name too long.</td></tr>
-	<tr><td class="code">FAM_ERR_NOT_CREATED</td><td>Region creation in FAM failed.</td></tr>
+	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
+	<tr><td class="code">FAM_ERR_OUTOFRANGE</td><td>Data access out of range.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
 	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
 	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
 	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
 	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
 	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
-	</tbody></table>
+	<tr><td class="code">FAM_BACKUP_NOT_CREATED</td><td>Backup creation failed.</td></tr>
+	</tbody>
+	</table>
 	<h2>Notes</h2>
-	<p>Note that the system may round up the actual size of the region
-		to align memory boundaries. Currently the maximum size of a region is
-		limited to 16 EiB by the API. See <a href="limitations.html">Design Choices</a>
-		for the current design limits within the OpenFAM reference implementation.
-		Also note that at present maximum region name length supported is 40 characters.
-		</p>
-	<p><code>Fam_Region_Descriptor</code> provides a method to retrieve an opaque read-only data structure called
-	<code>Fam_Global_Descriptor</code> which represents the region in FAM. <code>Fam_Global_Descriptor</code>
-	can be freely copied, and shared across processing nodes by the program, and is portable
-	across operating system and program instances.</p>
-<pre>
-// Fam_Global_Descriptor Fam_Region_Descriptor::get_global_descriptor();
-Fam_Global_Descriptor gDescriptor = regionDescriptor->get_global_descriptor();
-</pre>
-	<p><code>Fam_Region_Descriptor</code> can be instantiated from <code>Fam_Global_Descriptor</code> using the following constructor.</p>
-<pre>
-// Fam_Region_Descriptor::Fam_Region_Descriptor(Fam_Global_Descriptor gDescriptor);
-Fam_Region_Descriptor *rd = new Fam_Region_Descriptor(gDescriptor);
-</pre>
+	<p>Note that the method is non-blocking: it returns after the backup
+		has been initiated, and does not wait for completion of the transfer.
+		Also note that <code>fam_backup()</code> performs an inconsistent backup, in that the
+		copied data may reflect updates that are performed concurrently with
+		the backup operation, rather than a point-in-time snapshot of the source
+		data item that is consistent as of the beginning of backup operation. If
+		the application desires a consistent backup, it is responsible for
+		coordinating PE activity during the backup.</p>
 	<h2 id="e1">Example</h2>
 <pre>
-#include &lt;stdlib.h>
-#include &lt;stdio.h>
 #include &lt;string.h>
 #include &lt;fam/fam.h>
 #include &lt;fam/fam_exception.h>
 using namespace std;
 using namespace openfam;
-
+	
 int main(void) {
-
 	fam *myFam = new fam();
 	
-	// .. initialization code here
+	// ... Initialization code here
+
+	 try {
+		// look up the descriptor to a previously allocated (source) data item.
+		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem", "myRegion");
+		
+		// name of backup for given data item.
+		char *backupName = (char *)malloc(FILE_MAX_LEN);
+		sprintf(backupName, "%s.%s", "myRegion", "myItem");
+		
+		// Backup options, if any, can be provided here.
+		Fam_Backup_Options *backupOptions =
+		(Fam_Backup_Options *)malloc(sizeof(Fam_Backup_Options));
+		
+
+		// Initiates backup of given data item and returns a waitObject to backup operation.
+		void *waitObj = myFam->fam_backup(descriptor, backupName, backupOptions);
 	
-	try {
-	    Fam_Region_Attributes* regionAttributes = (Fam_Region_Attributes*)malloc(sizeof(Fam_Region_Attributes));
-		// create a 10 GB region with 0777 permissions for given region attributes
-		Fam_Region_Descriptor *rd = myFam->fam_create_region("myRegion", (uint64_t)10000000000, 0777, regionAttributes);
-		
-		/ use the created region...
-		printf("fam_create_region successful\n");
-		
-		// ... continuation code here
-		
-		// we are finished. Destroy the region and everything in it
-		myFam->fam_destroy_region(rd);
-		printf("fam_destroy_region successful\n");
-	} catch (Fam_Exception &amp;e) {
-		printf("Create/Destroy region failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
-	}
-	free(regionAttributes);
-	// ... finalization code here
+		// Wait for backup operation to complete.
+		myFam->fam_backup_wait(waitObj);
+		printf("Backup of data item is successful\n");
+	 } catch (Fam_Exception &amp;e) {
+		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+	 }
 	
+	 // ... subsequent code here
 }
 </pre>
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2021-22, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2022, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
