--- a/v3.0/fam_compare_swap.html
+++ b/v3.0/fam_compare_swap.html
@@ -93,13 +93,35 @@
 			<hr>
 		</nav>
 		<article>
-		<h1 class="code">openfam::fam::fam_create_region</h1>
-	<p>Create a new region in FAM.</p>
+			<h1 class="code">openfam::fam::fam_compare_swap</h1>
+	<p>Atomically conditionally replace a value in FAM with the given
+		value and return the old value.</p>
 	<h2>Synopsis</h2>
-	<p class="code">Fam_Region_Descriptor *fam_create_region(char *name, uint64_t
-		size, mode_t permissions, Fam_Region_Attributes* regionAttributes);</p>
+	<p class="code">int32_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
+		offset, int32_t oldValue, int32_t newValue);</p>
+	<p class="code">int64_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
+		offset, int64_t oldValue, int64_t newValue);</p>
+	<p class="code">uint32_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
+		offset, uint32_t oldValue, uint32_t newValue);</p>
+	<p class="code">uint64_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
+		offset, uint64_t oldValue, uint64_t newValue);</p>
+	<p class="code">int128_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
+		offset, int128_t oldValue, int128_t newValue);</p>
 	<h2>Description</h2>
-	<p>This method creates a region in FAM for subsequent use</p>
+	<p>These methods atomically perform a compare and swap of a value
+		in FAM, and return the old value from FAM. All of these methods
+		atomically implement the following algorithm (where TYPE is one of the
+		data types listed in the synopsis):</p>
+<pre>
+TYPE cas(TYPE *p, TYPE oldValue, TYPE newValue){
+  if(*p != oldValue){
+    return *p;
+  } else {
+    *p = newValue;
+    return oldValue;
+  }
+}
+</pre>
 	<h2>Input Arguments</h2>
 	<table>
 		<tbody>
@@ -112,127 +134,100 @@
 				</th>
 			</tr>
 			<tr>
-				<td class="code">
-					name
+				<td>
+					descriptor
 				</td>
 				<td>
-					Name of the region to be created.
+					Descriptor associated with the data item.
 				</td>
 			</tr>
 			<tr>
-				<td class="code">
-					size
+				<td>
+					offset
 				</td>
 				<td>
-					Requested size of the region in bytes.
+					Offset within the data item in FAM where
+						value is located.
 				</td>
 			</tr>
 			<tr>
-				<td class="code">
-					permissions
+				<td>
+					oldValue
 				</td>
 				<td>
-					Permissions to be associated with this region.
+					Expected old value at the FAM location.
 				</td>
 			</tr>
 			<tr>
-				<td class="code">
-					regionAttributes
+				<td>
+					newValue
 				</td>
 				<td>
-					Is a structure that holds region attributes like:
-				
-				<p>					
-					•	<b>redundancyLevel</b> represents the redundancy level for the data items within the region. The supported values for redundancyLevel are: {DEFAULT, NONE, RAID1, RAID5} . The current DEFAULT is NONE.
-				</p>
-				<p>
-					•	<b>memoryType</b> denotes the type of memory the region is created on. The supported values for memoryType are: {DEFAULT, VOLATILE, PERSISTENT}. For GoldenTicket, PERSISTENT regions will be created in SCM, while VOLATILE regions will be created in DRAM. The current DEFAULT is VOLATILE.
-				</p>
-				<p>
-					•	<b>interleaveEnable</b> denotes if data item interleaving is enabled for the region. The supported values are: {DEFAULT, ENABLE, DISABLE}. A value of DISABLE implies that data items within the region are not interleaved across memory servers, and each data item is hosted within a single memory server (subject to redundancyLevel). A value of ENABLE indicates data item interleaving is enabled, and data items are striped across memory servers using a system-defined interleave block size. The current DEFAULT value is DISABLE.
-				</p>			
+					New value to use if successful.
 				</td>
 			</tr>
 		</tbody>
 	</table>
-	<p>&nbsp;</p>
 	<h2>Return Values</h2>
-	<p>Descriptor to the created region. Throws <code>Fam_Exception</code> on error.</p>
+	<p>The old value from FAM. Throws <code>Fam_Exception</code> on
+		error.</p>
 	<h2>Fam error numbers</h2>
-	<table>
-	<tbody>
+	<table><tbody>
 	<tr><th>Error</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
 	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
-	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>Region name is already present in FAM.</td></tr>
-	<tr><td class="code">FAM_ERR_NAME_TOO_LONG</td><td>Region name too long.</td></tr>
-	<tr><td class="code">FAM_ERR_NOT_CREATED</td><td>Region creation in FAM failed.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
+	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>Item not found in the region.</td></tr>
 	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
 	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
 	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
 	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
 	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
+	<tr><td class="code">FAM_ERR_TIMEOUT</td><td>Number of libfabric retry count reached</td></tr>
 	</tbody></table>
 	<h2>Notes</h2>
-	<p>Note that the system may round up the actual size of the region
-		to align memory boundaries. Currently the maximum size of a region is
-		limited to 16 EiB by the API. See <a href="limitations.html">Design Choices</a>
-		for the current design limits within the OpenFAM reference implementation.
-		Also note that at present maximum region name length supported is 40 characters.
-		</p>
-	<p><code>Fam_Region_Descriptor</code> provides a method to retrieve an opaque read-only data structure called
-	<code>Fam_Global_Descriptor</code> which represents the region in FAM. <code>Fam_Global_Descriptor</code>
-	can be freely copied, and shared across processing nodes by the program, and is portable
-	across operating system and program instances.</p>
+	<p>These methods atomically compare a value in
+		FAM with an expected value and if the value in FAM is equal to the
+		expected value, swap a new value. The old value is returned. Note that
+		the offset argument must point to the correct value for the data type.
+		Availability of these methods is dependent on hardware support for the
+		operations. GCC currently does not define <code>int128_t</code>; it is defined in
+		<code>fam.h</code>.</p>
+	<h2>Example</h2>
 <pre>
-// Fam_Global_Descriptor Fam_Region_Descriptor::get_global_descriptor();
-Fam_Global_Descriptor gDescriptor = regionDescriptor->get_global_descriptor();
-</pre>
-	<p><code>Fam_Region_Descriptor</code> can be instantiated from <code>Fam_Global_Descriptor</code> using the following constructor.</p>
-<pre>
-// Fam_Region_Descriptor::Fam_Region_Descriptor(Fam_Global_Descriptor gDescriptor);
-Fam_Region_Descriptor *rd = new Fam_Region_Descriptor(gDescriptor);
-</pre>
-	<h2 id="e1">Example</h2>
-<pre>
-#include &lt;stdlib.h>
-#include &lt;stdio.h>
 #include &lt;string.h>
 #include &lt;fam/fam.h>
 #include &lt;fam/fam_exception.h>
 using namespace std;
 using namespace openfam;
-
+	
 int main(void) {
-
 	fam *myFam = new fam();
 	
-	// .. initialization code here
-	
+	// ... Initialization code here
 	try {
-	    Fam_Region_Attributes* regionAttributes = (Fam_Region_Attributes*)malloc(sizeof(Fam_Region_Attributes));
-		// create a 10 GB region with 0777 permissions for given region attributes
-		Fam_Region_Descriptor *rd = myFam->fam_create_region("myRegion", (uint64_t)10000000000, 0777, regionAttributes);
+		// look up the descriptor to a previously allocated data item
+		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem", "myRegion");
+
+		// Atomically compare and replaces the first integer element in FAM with 0
+		// only if it contains 100; It returns the old value
+		int32_t oldValue = myFam->fam_compare_swap(descriptor, 0, 100, 0);
+
+		// The first integer in FAM is replaced with 0 only if it contains 100;
+		// Old value is returned
+		printf("Old value of first integer element in FAM: %d\n", oldValue);
 		
-		/ use the created region...
-		printf("fam_create_region successful\n");
-		
-		// ... continuation code here
-		
-		// we are finished. Destroy the region and everything in it
-		myFam->fam_destroy_region(rd);
-		printf("fam_destroy_region successful\n");
+		// ... subsequent code here
 	} catch (Fam_Exception &amp;e) {
-		printf("Create/Destroy region failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
 	}
-	free(regionAttributes);
-	// ... finalization code here
-	
-}
+	// ... Finalization code follows
+}	
 </pre>
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2021-22, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
