--- a/v3.0/fam_create_region.html
+++ b/v3.0/fam_create_region.html
@@ -97,7 +97,7 @@
 	<p>Create a new region in FAM.</p>
 	<h2>Synopsis</h2>
 	<p class="code">Fam_Region_Descriptor *fam_create_region(char *name, uint64_t
-		size, mode_t permissions, Fam_Region_Attributes* regionAttributes);</p>
+		size, mode_t permissions, Fam_Redundancy_Level redundancyLevel, ...);</p>
 	<h2>Description</h2>
 	<p>This method creates a region in FAM for subsequent use</p>
 	<h2>Input Arguments</h2>
@@ -137,20 +137,10 @@
 			</tr>
 			<tr>
 				<td class="code">
-					regionAttributes
+					redundancyLevel
 				</td>
 				<td>
-					Is a structure that holds region attributes like:
-				
-				<p>					
-					•	<b>redundancyLevel</b> represents the redundancy level for the data items within the region. The supported values for redundancyLevel are: {DEFAULT, NONE, RAID1, RAID5} . The current DEFAULT is NONE.
-				</p>
-				<p>
-					•	<b>memoryType</b> denotes the type of memory the region is created on. The supported values for memoryType are: {DEFAULT, VOLATILE, PERSISTENT}. For GoldenTicket, PERSISTENT regions will be created in SCM, while VOLATILE regions will be created in DRAM. The current DEFAULT is VOLATILE.
-				</p>
-				<p>
-					•	<b>interleaveEnable</b> denotes if data item interleaving is enabled for the region. The supported values are: {DEFAULT, ENABLE, DISABLE}. A value of DISABLE implies that data items within the region are not interleaved across memory servers, and each data item is hosted within a single memory server (subject to redundancyLevel). A value of ENABLE indicates data item interleaving is enabled, and data items are striped across memory servers using a system-defined interleave block size. The current DEFAULT value is DISABLE.
-				</p>			
+					Desired redundancy level.
 				</td>
 			</tr>
 		</tbody>
@@ -209,9 +199,8 @@ int main(void) {
 	// .. initialization code here
 	
 	try {
-	    Fam_Region_Attributes* regionAttributes = (Fam_Region_Attributes*)malloc(sizeof(Fam_Region_Attributes));
-		// create a 10 GB region with 0777 permissions for given region attributes
-		Fam_Region_Descriptor *rd = myFam->fam_create_region("myRegion", (uint64_t)10000000000, 0777, regionAttributes);
+		// create a 10 GB region with 0777 permissions and RAID5 redundancy
+		Fam_Region_Descriptor *rd = myFam->fam_create_region("myRegion", (uint64_t)10000000000, 0777, RAID5);
 		
 		/ use the created region...
 		printf("fam_create_region successful\n");
@@ -224,7 +213,7 @@ int main(void) {
 	} catch (Fam_Exception &amp;e) {
 		printf("Create/Destroy region failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
 	}
-	free(regionAttributes);
+	
 	// ... finalization code here
 	
 }
@@ -232,7 +221,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2021-22, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
