--- a/v3.0/release_notes.html
+++ b/v3.0/release_notes.html
@@ -60,12 +60,6 @@
 				<li><a href="fam_scatter.html">fam_scatter</a></li>
 				<li><a href="fam_copy.html">fam_copy</a></li>
 				<li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
-				<li><a href="fam_backup.html">fam_backup</a></li>
-				<li><a href="fam_backup_wait.html">fam_backup_wait</a></li>
-				<li><a href="fam_restore.html">fam_restore</a></li>
-				<li><a href="fam_restore_wait.html">fam_restore_wait</a></li>
-				<li><a href="fam_delete_backup.html">fam_delete_backup</a></li>
-				<li><a href="fam_delete_backup_wait.html">fam_delete_backup_wait</a></li>
 			</ul>
 			<hr>
 			Atomics
@@ -95,9 +89,6 @@
 				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
-				<li><a href="fam_progress.html">fam_progress</a></li>
-				<li><a href="fam_context_open.html">fam_context_open</a></li>
-				<li><a href="fam_context_close.html">fam_context_close</a></li>
 			</ul>
 			<hr>
 		</nav>
@@ -105,8 +96,6 @@
 		<h1>OpenFAM release notes</h1>
 		These notes summarize the different releases of OpenFAM. A more detailed list of list of features, enhancements and bug fixes are added to the source tree in all the released versions,
 		and are provided in the corresponding NEWS.md file. Build and installation instructions are listed in the corresponding README.md file located in the source tree. 
-		<h2>OpenFAM version 3.0 (release v3.0.0)</h2>
-		<p>The current version of OpenFAM is 2.0. It contains the following changes and enhancements over version 2.0:</p>
 		<h2>OpenFAM version 2.0 (release v2.0.0)</h2>
 		<p>The current version of OpenFAM is 2.0. It contains the following changes and enhancements over version 1.0:</p>
 		<ul>
@@ -137,14 +126,13 @@
 		</ul>
 		<h2>Documentation updates</h2>
 		<ul>
-				<li><a href="v3.0/index.html">OpenFAM version 3.0</a></li>
-				<li><a href="v2.0/index.html">OpenFAM version 2.0</a></li>
-				<li><a href="v1.0/index.html">OpenFAM version 1.0</a></li>
+				<li><a href="index.html">OpenFAM version 2.0</a></li>
+				<li><a href="../v1.0/index.html">OpenFAM version 1.0</a></li>
 		</ul>
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2021-22, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
