--- a/v3.0/services.html
+++ b/v3.0/services.html
@@ -60,12 +60,6 @@
 				<li><a href="fam_scatter.html">fam_scatter</a></li>
 				<li><a href="fam_copy.html">fam_copy</a></li>
 				<li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
-				<li><a href="fam_backup.html">fam_backup</a></li>
-				<li><a href="fam_backup_wait.html">fam_backup_wait</a></li>
-				<li><a href="fam_restore.html">fam_restore</a></li>
-				<li><a href="fam_restore_wait.html">fam_restore_wait</a></li>
-				<li><a href="fam_delete_backup.html">fam_delete_backup</a></li>
-				<li><a href="fam_delete_backup_wait.html">fam_delete_backup_wait</a></li>
 			</ul>
 			<hr>
 			Atomics
@@ -95,56 +89,40 @@
 				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
-				<li><a href="fam_progress.html">fam_progress</a></li>
-				<li><a href="fam_context_open.html">fam_context_open</a></li>
-				<li><a href="fam_context_close.html">fam_context_close</a></li>
 			</ul>
 			<hr>
 		</nav>
 		<article>
-		<h1>OpenFAM release notes</h1>
-		These notes summarize the different releases of OpenFAM. A more detailed list of list of features, enhancements and bug fixes are added to the source tree in all the released versions,
-		and are provided in the corresponding NEWS.md file. Build and installation instructions are listed in the corresponding README.md file located in the source tree. 
-		<h2>OpenFAM version 3.0 (release v3.0.0)</h2>
-		<p>The current version of OpenFAM is 2.0. It contains the following changes and enhancements over version 2.0:</p>
-		<h2>OpenFAM version 2.0 (release v2.0.0)</h2>
-		<p>The current version of OpenFAM is 2.0. It contains the following changes and enhancements over version 1.0:</p>
-		<ul>
-			<li>Scalability improvements: This version supports a larger pool of memory by allowing multiple memory servers to be used. See <a href="services.html">services</a> for more details. </li>
-			<li>Performance improvements: Memory management and metadata operations have been optimized. 
-				<ul>
-					<li>Background worker threads (unused in OpenFAM 1.0) were disabled from the memory service.</li>
-					<li>Allocation performance was improved by moving the memset operation to zero allocated memory from <code>fam_allocate()</code> to <code>fam_deallocate()</code> path.</li>
-					<li>Regions can span multiple memory servers, thus reducing network bottlenecks when multiple data items within the same region are used.</li>
-				</ul> 
-			</li>
-			<li>OpenFAM APIs changes: 
-				<ul>
-					<li><code>fam_size</code> has been replaced with <code>fam_stat</code>.</li>
-					<li><code>fam_copy</code> has been changed to allow data copies between regions, as well as within a region.</li>
-					<li>The return type was changed from <code>int</code> to <code>void</code> for the following APIs: <code>fam_initialize,
-						fam_resize_region, fam_change_permissions, fam_put_blocking, fam_get_blocking, fam_gather_blocking, fam_scatter_blocking</code>. 
-					<li><code>fam_barrier_all</code> has been added as a supported API.</li>
-				</ul>
-			</li>
-			<li>Exception and error handling was simplified. All OpenFAM APIs returns only one exception type on error, i.e, <code>Fam_Exception</code>.</li>
-		</ul>
-		<h2>OpenFAM version 1.0 (release v0.4.0)</h2>
-		<ul>
-				<li>Initial public release of OpenFAM reference implementation</li>
-				<li>Memory allocator models implemented: "Shared memory model" to be used on scale-up platforms and "Memory server model" to be used on scale-out (cluster) platforms.</li>
-				<li>Memory server model uses libfabric and support sockets, verbs and psm providers. </li>
-		</ul>
-		<h2>Documentation updates</h2>
-		<ul>
-				<li><a href="v3.0/index.html">OpenFAM version 3.0</a></li>
-				<li><a href="v2.0/index.html">OpenFAM version 2.0</a></li>
-				<li><a href="v1.0/index.html">OpenFAM version 1.0</a></li>
-		</ul>
+		<h1>OpenFAM 2.0 Services</h1>
+<p> The initial reference implementation of OpenFAM was built using a single memory server.
+OpenFAM version 2.0 contains significant design changes to the memory server.
+<ul>
+<li>The design supports a larger pool of memory by supporting multiple memory servers.</li>
+<li>Regions can now span multiple memory servers, thus reducing performance bottlenecks.</li>
+<li>Memory servers can be addeded to the pool as needed without disturbing previously allocated memory.</li>
+<li>Metadata services have been separated from the memory server, enabling scalability.</li>
+</ul>
+<figure>
+<img src="images/openfam2.0memoryserver.png" width="450px">
+<figcaption>Figure 1: OpenFAM 2.0 Memory server components</figcaption>
+</figure>
+<p> Figure 1 shows the new design. There are three main components in the design.
+<dl>
+<dt>The client interface service (CIS):</dt><dd>All PEs talk to the CIS for memory server operations.</dd>
+<dt>The metadata management service:</dt><dd>Region and data item metadata is hosted by the metadata management service.
+The service can be co-located in the same node as a CIS server or a memory server, or it can be run in dedicated metadata management nodes.</dd>
+<dt>The memory management service:</dt><dd> The actual memory is served from memory servers.
+For data path (<code>get</code>, <code>put</code> and <code>atomic</code>) operations PEs talk to the memory servers directly.
+For memory management and metadata operations, e.g., <code>allocate</code>, <code>lookup</code>, <code>create_region</code>, etc.,
+the CIS communicates with memory servers via an RPC service or via direct functions calls.</dd>
+</dl>
+The services communicate with one another using grpc calls. However, as an optimization, if the components are compiled into the same executable, they bypass grpc and use direct function calls for communication.
+Yaml-based configuration files determine how the services are configured.  
+<p>See configuration and startup of OpenFAM 2.0 services in the <a href="config_files.html">Configuration Files</a> section.</p>
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2021-22, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
